# pytorch-operator-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
src/kernels/: binding.cpp  vadd.cu
tests/: main.py
